# ical_vcard

./: Cargo.toml  README.md
.github/workflows/: ci.yml
proptest-regressions/: folding.txt
src/: folding.rs  lib.rs
